More java 8 compatiblity